force-app/main/default/objects/Interview_Answer__c/Interview_Answer__c.object-meta.xml
<CustomObject>
    <label>Interview Answer</label>
    <nameField>
        <displayFormat>INTA-{0000}</displayFormat>
        <label>Interview Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>