force-app/main/default/objects/Interview_Answer__c/fields/Interview_Question__c.field-meta.xml
<CustomField>
    <fullName>Interview_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Question</label>
    <referenceTo>Interview_Questions__c</referenceTo>
    <relationshipLabel>Interview Answers</relationshipLabel>
    <relationshipName>Interview_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>