force-app/main/default/objects/Interview_Answer__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <label>Interviewer</label>
    <referenceTo>Interviewer__c</referenceTo>
    <relationshipLabel>Interview Answers</relationshipLabel>
    <relationshipName>Interview_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>