force-app/main/default/objects/Interview_Answer__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <inlineHelpText>Put the Score for the Candidate from 1 to 5 (5 being the highest)</inlineHelpText>
    <label>Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>